<resources>
    <string name="app_name">Hanback Battleship</string>
    <string name="difficulty">difficulty</string>
    <string name="easy">easy</string>
    <string name="normal">normal</string>
    <string name="difficult">difficult</string>
    <string name="place_ship">Place ship</string>
    <string name="ready">READY!</string>
    <string name="corners">corners</string>
    <string name="bubbles">bubbles</string>
    <string name="ocean">ocean</string>
    <string name="rotate">Rotate</string>
    <string name="next">Next</string>
    <string name="your_turn">Your turn</string>
    <string name="opponents">Opponent\'s</string>
    <string name="turn">turn</string>
    <string name="launch">Launch missile</string>
    <string name="water">WATER!</string>
    <string name="hit">SHIP HIT!</string>
    <string name="sunken">SHIP SUNK!</string>
    <string-array name="orientation">
        <item>Horizontal</item>
        <item>Vertical</item>
    </string-array>
    <string-array name="quarter">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="you">YOU</string>
    <string name="won">WON!</string>
    <string name="lost">LOST!</string>
    <string name="game_over">GAME OVER</string>
    <string name="play_again">play again</string>
</resources>